import("//azer/build/templates/afx.gni")

afx("effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}
executable("sample_cubemap") {
  sources = ["main.cc"]
  deps = [
    "//azer/base:appinit",
    "//azer/render",
    ":effect",
  ]

  gen_dir = rebase_path(target_gen_dir)
  defines = ["EFFECT_GEN_DIR=\"$gen_dir/\""]
}