import("//azer/build/templates/afx.gni")

afx("effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}

executable("sandbox_samples_triangle") {
  sources = ["main.cc"]
  deps = [
    "//base:appinit",
    "//azer/util:azer_util",
    "//azer/render:render",
    "//azer/render_system/d3d11:d3d11_render_system",
    ":effect",
  ]
}