import("//azer/build/templates/afx.gni")

afx("effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}


executable("demo") {
  output_name = "asbox_scene_demo"

  sources = [
    "main.cc",
  ]
  deps = [
    "//skia",
    "//azer",
    "//ui/views",
    "//ui/base",
    "//ui/events",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//azer/sandbox/base",
    ":effect",
  ]

  gen_dir = rebase_path(target_gen_dir)
  defines = ["EFFECT_GEN_DIR=\"$gen_dir/\""]
}