import("//azer/build/templates/afx.gni")

afx("effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}
executable("sandbox_ui_panel") {
  sources = ["main.cc"]
  deps = [
    "//azer/base:appinit",
    "//azer/util",
    "//azer/render",
    "//azer/render_system/d3d11:d3d11_render_system",
    "//ui/gfx/geometry",
    ":effect",
  ]

  gen_dir = rebase_path(target_gen_dir)
  defines = ["EFFECT_GEN_DIR=\"$gen_dir/\""]
}